<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home_menu"
        android:icon="@drawable/image_gear"
        android:title="@string/cambiar_nombre_grupo"
        app:showAsAction="always"
        android:orderInCategory="0">

        <menu>
            <item
                android:id="@+id/home_menu_create_group"
                android:title="@string/crear_grupo"/>
            <item
                android:id="@+id/home_menu_terms_and_conditions"
                android:title="@string/terminos_y_condiciones"/>
            <item
                android:id="@+id/home_menu_contact"
                android:title="@string/contacto"/>
            <item
                android:id="@+id/home_menu_logout"
                android:title="@string/cerrar_sesion"/>
        </menu>

    </item>

</menu>