<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:orientation="vertical"
    android:id="@+id/create_group_layout"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:weightSum="100">

    <ImageView
        android:id="@+id/create_group_image"
        android:layout_weight="40"
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:src="@drawable/plus"/>

    <RelativeLayout
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        >

            <TextView
                android:id="@+id/create_group_edit_name_text"
                android:text="@string/nombre_de_grupo"
                android:layout_marginEnd="10dp"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:layout_width="wrap_content"/>

            <ImageView
                android:id="@+id/create_group_edit_name"
                android:layout_toEndOf="@id/create_group_edit_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/image_gear_black"/>

    </RelativeLayout>

    <TextView
        android:layout_weight="6"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textColor="@color/mainColor"
        android:textSize="20sp"
        android:text="@string/descripcion"
        android:layout_marginStart="10dp"
        android:fontFamily="sans-serif"
        />

    <TextView
        android:layout_weight="17"
        android:id="@+id/create_group_description"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textSize="15sp"
        android:text="@string/descripcion_hint"
        android:layout_marginStart="10dp"
        android:fontFamily="sans-serif"
        />

    <TextView
        android:layout_weight="7"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textColor="@color/mainColor"
        android:textSize="20sp"
        android:text="@string/categorias"
        android:layout_marginStart="10dp"
        android:fontFamily="sans-serif"
        />

    <android.support.v7.widget.RecyclerView
        android:layout_weight="10"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/create_group_view_categories"
        android:layout_marginBottom="20dp"
        >
    </android.support.v7.widget.RecyclerView>

    <Button
        android:textColor="@android:color/white"
        android:layout_weight="10"
        android:id="@+id/create_group"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/crear"
        android:textSize="20sp"
        android:background="@color/mainColor"
        />

</LinearLayout>