<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/group_info_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/buttons_layout">

        <RelativeLayout
            android:id="@+id/RelativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/group_info_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:adjustViewBounds="true"
                android:scaleType="fitStart" />

            <TextView
                android:id="@+id/description_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/group_info_image"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/descripcion"
                android:textColor="@color/mainColor"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/group_info_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/description_text"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:gravity="start"

                android:textSize="15sp" />

            <TextView
                android:id="@+id/group_info_user_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/group_info_description"
                android:layout_marginBottom="2dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:scrollbars="vertical"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <tretornesp.clickerchat3.NonScrollableListView
                android:id="@+id/group_info_user_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/group_info_user_number"
                android:divider="@drawable/list_divider"
                android:dividerHeight="1px" />

        </RelativeLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/buttons_layout"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/delete_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/mainColor"
            android:text="@string/borrar_grupo" />

        <View
            android:id="@+id/divisor"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />

        <Button
            android:id="@+id/exit_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/mainColor"
            android:text="@string/salir"
            android:textColor="@android:color/white" />
    </LinearLayout>
</RelativeLayout>